--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 layout: default
 title: 404
 hide-in-nav: true
-description: "你来到了没有知识的荒原 :("
-header-img: "img/404-bg.jpg"
+description: "Page not found, but I found you！:)"
+header-img: "img/404_bg.jpg"
 permalink: /404.html
 ---
 
